# sonic-moe

./: README.md  pyproject.toml  requirements.txt  test.ipynb
benchmarks/: moe-cute.py  moe-token-rounding.py
sonicmoe/: jit.py  moe.py  utils.py
sonicmoe/count_cumsum/: __init__.py  count_cumsum_triton.py  kernel.cu
sonicmoe/functional/: __init__.py  backward.py  expertbias_topk.py  forward.py  grouped_gemm.py  reduction_over_k_gather.py  topk_softmax.py
sonicmoe/quack_utils/: gemm_dgated.py  gemm_gated.py  gemm_interface.py
tests/: count_cumsum_test.py  count_cumsum_triton_test.py  moe_test.py
